tests/ui/type/missing-let-in-binding-2.stderr
error: expected identifier, found `:`
  --> $DIR/missing-let-in-binding-2.rs:4:7
   |
LL |     _v: Vec<i32> = vec![1, 2, 3];
   |       ^ expected identifier
   |
help: you might have meant to introduce a new binding
   |
LL |     let _v: Vec<i32> = vec![1, 2, 3];
   |     +++

error: aborting due to previous error

